--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.main, .about, .projects {
+.main, .skills, .about, .projects {
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -11,10 +11,18 @@ div.title {
 	top: 220px;
   position: -webkit-sticky; /* Safari */
   position: sticky;
-
 }
 
-div.title p {
+div.skills-title {
+	position: absolute;
+	background-color: transparent;
+	font-size: 25px;
+	width: 100%;
+	margin-top: 14%;
+	text-align: center;
+}
+
+div.title p, div.skills-title p {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 50px;
 	font-weight: bold;
@@ -38,6 +46,12 @@ font-family: 'Over the Rainbow', cursive;
     opacity: 0.8;
 }
 
+.skills {
+		background-image: url(./images/skills.jpeg);
+    min-height: 400px;
+    opacity: 0.8;
+}
+
 .about {
     background-image: url(./images/shadow2.jpeg);
     min-height: 400px;
@@ -50,29 +64,28 @@ font-family: 'Over the Rainbow', cursive;
     opacity: 0.8;
 }
 
-.main-text {
+.main-text, .projects-text {
+	text-align: justify;
 	color: #777;
 	background-color:white;
-	text-align: justify;
-  margin: 0 auto;
 	padding:20px 80px;
-	z-index: 3;
+	margin: 0 auto;
+}
+
+.skills-text {
+	text-align: justify;
+	background-color: #1D2126;
+	color: white;
+	padding:50px 80px;
 }
 
 
-
-/*div.header {
-	width: 100%;
-	opacity: 0.8;
+span.caption {
+	letter-spacing: 10px;
+	font-weight: bold;
+	font-size: 37px;
 }
-
-div.header img {
-	max-width: 100%;
-  max-height: 100%;
-}
-
-
-
+/*
 .animate{
  stroke-dasharray: 300;
  stroke-dashoffset: 300;
