--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ div.skills-title {
 	position: absolute;
 	background-color: transparent;
 	font-size: 25px;
-	width: 100%;
+	width: 120%;
 	margin-top: 14%;
 	text-align: center;
 }
@@ -186,7 +186,7 @@ font-family: 'Over the Rainbow', cursive;
 	text-align: justify;
 	color: #777;
 	background-color:white;
-	padding:20px 80px;
+	padding:40px 80px;
 	margin: 0 auto;
 }
 
@@ -210,7 +210,6 @@ font-family: 'Over the Rainbow', cursive;
 }
 
 span.caption {
-	letter-spacing: 10px;
 	font-weight: bold;
 	font-size: 37px;
 }
@@ -219,6 +218,13 @@ h2.skills-title {
 	margin-bottom: 20px;
 }
 
+i.large.material-icons {
+		font-size: 6rem;
+    position: sticky;
+    margin-bottom: 20px;
+    margin-top: 375px;
+    margin-left: 600px;
+}
 
 @media (max-width: 576px) {
 	.main, .skills, .about, .projects {
@@ -227,17 +233,25 @@ h2.skills-title {
 	}
 
 	div.title {
-		margin-left: 27px;
-	}
+		background-color: rgba(255,255,255,0.5);
+		padding-left: 27px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 0;
+  }
+
+  div.skills-title {
+  	margin-top: 29%;
+  }
 
 	div.title p, div.skills-title p {
-		font-size: 23px;
+		font-size: 30px;
 	}
 
 	svg#audrey {
-		margin-left: 138px;
+		margin-left: 174px;
     margin-top: 2px;
-    margin-right: 30px;
+    margin-right: -92px;
 	}
 
 	.main, .about, .projects {
@@ -249,9 +263,23 @@ h2.skills-title {
 		min-height: 300px;
 	}
 
+	.main-text {
+		padding: 20px 80px;
+	}
+
 	.skills-text {
 		padding: 50px 80px;
 	}
+
+	i.large.material-icons {
+		font-size: 3rem;
+    margin-left: 250px;
+    margin-bottom: 0px;
+	}
+
+	span.caption {
+	font-size: 28px;
+}
 }
 /*
 
