--- a/styles.css
+++ b/styles.css
@@ -28,129 +28,15 @@ div.title p, div.skills-title p {
 	font-weight: bold;
 }
 
-@keyframes audrey {
-	100% {
-		stroke-dashoffset: 0;
-	}
-}
-
-#audr1 {
-	stroke-dasharray: 500;
-	stroke-dashoffset: 500;
-	stroke-width: 6;
-	animation: audrey 3s linear forwards;
-}
-
-#audr2 {
-	stroke-dasharray: 500;
-	stroke-dashoffset: 500;
-	stroke-width: 4;
-	animation: audrey 2s linear forwards .3s;
-}
-
-#audr3 {
-	stroke-dasharray: 400;
-	stroke-dashoffset: 400;
-	stroke-width: 6;
-	animation: audrey .9s linear forwards .5s;
-}
-
-#audr4 {
-	stroke-dasharray: 400;
-	stroke-dashoffset: 400;
-	stroke-width: 6;
-	animation: audrey 2s linear forwards .6s;
-}
-
-#audr5 {
-	stroke-dasharray: 300;
-	stroke-dashoffset: 300;
-	stroke-width: 6;
-	animation: audrey 2s linear forwards 0.8s;
-}
-
-#audr6 {
-	stroke-dasharray: 300;
-	stroke-dashoffset: 300;
-	stroke-width: 7;
-	animation: audrey 4s linear forwards 1s;
-}
-
-#audr7 {
-	stroke-dasharray: 300;
-	stroke-dashoffset: 300;
-	stroke-width: 6;
-	animation: audrey 3s linear forwards 1.2s;
-}
-
-#audr8 {
-	stroke-dasharray: 500;
-	stroke-dashoffset: 500;
-	stroke-width: 6;
-	animation: audrey 2s linear forwards 1.4s;
-}
-
-#e1 {
-	stroke-dasharray: 300;
-	stroke-dashoffset: 300;
-	stroke-width: 5;
-	animation: audrey 1s linear forwards 1.6s;
-}
-
-#y1 {
-	stroke-dasharray: 500;
-	stroke-dashoffset: 500;
-	stroke-width: 5;
-	animation: audrey 1s linear forwards 1.8s;
-}
-
-#k1 {
-	stroke-dasharray: 500;
-	stroke-dashoffset: 500;
-	stroke-width: 5;
-	animation: audrey 1s linear forwards 2s;
-}
-
-#k2 {
-	stroke-dasharray: 500;
-	stroke-dashoffset: 500;
-	stroke-width: 5;
-	animation: audrey 1s linear forwards 2.1s;
-}
-
-
-#k3 {
-	stroke-dasharray: 500;
-	stroke-dashoffset: 500;
-	stroke-width: 5;
-	animation: audrey 1s linear forwards 2.2s;
-}
-
-#o1 {
-	stroke-dasharray: 500;
-	stroke-dashoffset: 500;
-	stroke-width: 5;
-	animation: audrey 1s linear forwards 2.6s;
-}
-
-
-#w1 {
-	stroke-dasharray: 500;
-	stroke-dashoffset: 500;
-	stroke-width: 5;
-	animation: audrey 1s linear forwards 2.8s;
-}
-
-svg#audrey {
+img#audrey {
 	  position: absolute;
-    margin-left: 19%;
-    margin-top: 0%;
-    margin-right: 64%;
+    width: 27%;
 }
 
 div.fill-blanks {
   position: -webkit-sticky; /* Safari */
   position: sticky;
+  margin-left: 230px;
 }
 
 
@@ -214,15 +100,54 @@ h2.skills-title {
 	margin-bottom: 20px;
 }
 
-	span#details {
-		position: absolute;
-    bottom: 25%;
-    margin-left: 50%;
-    font-size: 50px;
+span#details {
+	position: absolute;
+   bottom: 25%;
+   margin-left: 50%;
+   font-size: 50px;
+}
+
+p.about-me {
+	 line-height: 31px;
+}
+
+p.contact-me {
+	font-size: 17px;
+}
+
+span.contact-icons {
+	font-size: 40px;
+	margin-right: 11px;
+}
+
+@keyframes bounce {
+	0%, 20%, 60%, 100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
 	}
+
+	40% {
+		-webkit-transform: translateY(-10px);
+		transform: translateY(-10px);
+	}
+
+	80% {
+		-webkit-transform: translateY(-5px);
+		transform: translateY(-5px);
+	}
+}
 
 a:link {
     color: inherit;
+}
+
+a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+i:hover {
+	animation: bounce 1s;
 }
 
 @media (max-width: 576px) {
@@ -244,18 +169,11 @@ a:link {
   }
 
 	div.title p, div.skills-title p {
-		font-size: 30px;
+		font-size: 7.5vw;
 	}
 
-	svg#audrey {
-		margin-left: 35%;
-    margin-top: 0%;
-    margin-right: 37%;
-	}
-
-	.main, .about, .projects {
-		margin-top: -20px;
-    min-height: 495px;
+	img#audrey {
+		width: 43vw;
 	}
 
 	.skills {
@@ -275,8 +193,16 @@ a:link {
 }
 
 	span#details {
-    font-size: 30px;
+    font-size: 7.5vw;
     bottom: 45%;
+	}
+
+	p.contact-me {
+		font-size: 3.5vw;
+	}
+
+	span.contact-icons {
+		font-size: 6.5vw;
 	}
 
 }
