--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ div.fill-blanks {
 	text-align: justify;
 	color: #777;
 	background-image: url(./images/galaxy.jpg);
-	padding:70px 80px;
+	padding: 106px 80px;
 	margin: 0 auto;
 }
 
@@ -136,6 +136,55 @@ span.contact-icons {
 		-webkit-transform: translateY(-5px);
 		transform: translateY(-5px);
 	}
+}
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    max-width: 839px;
+    height: 100%;
+}
+
+/*p.in-modal {
+	padding-bottom: 20px;
+}
+*/
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.app-pic img {
+	  max-width: 286px;
+    max-height: 174px;
 }
 
 a:link {
